# solo-wargame-ai

./: .gitignore  ASSUMPTIONS.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
configs/missions/: mission_01_secure_the_woods_1.toml  mission_02_secure_the_woods_2.toml  mission_03_secure_the_building.toml
docs/: action_model.md  architecture.md  development_workflow.md  episode_batch_runner.md  game_spec.md  mission_config.md  mvp_mission_01_spec.md  reward_design.md  state_model.md  testing_strategy.md
docs/internal/: README.md  (+7 more)
tests/: README.md  test_activation_flow.py  test_advance_rules.py  test_benchmark.py  test_combat_rules.py  test_cover_and_rally.py  test_decision_context.py  test_env_action_catalog.py  test_env_legality.py  test_env_observation.py  test_env_resolver_session.py  test_episode_runner.py  test_german_phase.py  test_heuristic_agent.py  test_hexgrid.py  test_initial_state.py  test_low_morale_constraints.py  test_mission1_env.py  test_mission1_integration.py  test_mission3_env.py  test_mission3_env_action_catalog.py  test_mission3_env_legality.py  test_mission3_env_observation.py  test_mission3_replay.py  test_mission3_rules.py  test_mission_loader.py  test_mission_validation.py  test_order_chart_lookup.py  test_order_execution_legality.py  test_phase5_feature_adapter.py  test_phase5_learned_policy_eval.py  test_phase5_masked_actor_critic.py  test_phase5_reporting_and_cli.py  test_phase5_torch_actor_critic.py  test_phase5_training.py  test_replay_contracts.py  test_replay_determinism.py  test_resolver_contracts.py  test_reveal_rules.py  test_rng.py  (+4 more)
(+134 files in other folders)
